Update src/main/java/com/diary/shared_diary/dto/group/GroupDetailResponseDto.java
Co-authored-by: Jae Min Yu <woawoa0513@gmail.com>